infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payment
    namespace: payment
spec:
    selector:
        matchLabels:
            app: payment
    template:
        metadata:
            labels:
                app: payment
        spec:
            serviceAccountName: payment
            containers:
                - name: payment
                  image: soatproject/fastfood-payment-service:latest
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          cpu: "500m"
                          memory: "512Mi"
                      limits:
                          cpu: "1"
                          memory: "2Gi"
                  livenessProbe:
                      httpGet:
                          path: /payments/health/liveness
                          port: 8080
                      initialDelaySeconds: 90
                      periodSeconds: 10
                      failureThreshold: 3
                  readinessProbe:
                      httpGet:
                          path: /payments/health/readiness
                          port: 8080
                      initialDelaySeconds: 90
                      periodSeconds: 5
                      failureThreshold: 3
