infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: payment-service
    namespace: payment
spec:
    selector:
        app: payment
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
