infra/kubernetes/app-examble.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: payment
---
apiVersion: v1
kind: Service
metadata:
    name: payment-service
    namespace: payment
spec:
    selector:
        app: payment
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payment
    namespace: payment
spec:
    selector:
        matchLabels:
            app: payment
    template:
        metadata:
            labels:
                app: payment
        spec:
            serviceAccountName: payment
            containers:
                - name: payment
                  image: soatproject/fastfood-payment-service:latest
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          cpu: "500m"
                          memory: "512Mi"
                      limits:
                          cpu: "1"
                          memory: "2Gi"
                  livenessProbe:
                          httpGet:
                              path: /health
                              port: 8080
                          initialDelaySeconds: 30
                          periodSeconds: 10
                          failureThreshold: 3
                  readinessProbe:
                          httpGet:
                              path: /health
                              port: 8080
                          initialDelaySeconds: 30
                          periodSeconds: 5
                          failureThreshold: 3
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: payment
    namespace: payment
spec:
    parentRefs:
        - name: eg
          namespace: envoy-gateway-system
    rules:
        - backendRefs:
              - group: ""
                kind: Service
                name: payment-service
                namespace: payment
                port: 80
                weight: 1
          matches:
              - path:
                    type: PathPrefix
                    value: /payment
