infra/kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: payment
    namespace: payment
spec:
    parentRefs:
        - name: eg
          namespace: envoy-gateway-system
    rules:
        - backendRefs:
              - group: ""
                kind: Service
                name: payment-service
                namespace: payment
                port: 80
                weight: 1
          matches:
              - path:
                    type: PathPrefix
                    value: /payments
